objects/Configuration__c/Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>