objects/Configuration__c/fields/Configuration_type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_type__c</fullName>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DS3</fullName>
            </value>
            <value>
                <fullName>OCn</fullName>
            </value>
            <value>
                <fullName>Fast Ethernet (Electrical Interface)</fullName>
            </value>
            <value>
                <fullName>Gigabit Ethernet (Optical Interface)</fullName>
            </value>
            <value>
                <fullName>DS1</fullName>
            </value>
            <value>
                <fullName>Wavelength Services</fullName>
            </value>
            <value>
                <fullName>DS3:</fullName>
            </value>
            <value>
                <fullName>OCn:</fullName>
            </value>
            <value>
                <fullName>Ultra Ethernet 10/100 (Electrical Interface)</fullName>
            </value>
            <value>
                <fullName>Ultra Ethernet Gigabit Ethernet (Optical Interface)</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>