objects/Configuration__c/fields/Connector_Type__c.field-meta.xml
<CustomField>
    <fullName>Connector_Type__c</fullName>
    <label>Connector Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LC-LC</fullName>
            </value>
            <value>
                <fullName>LC-SC</fullName>
            </value>
            <value>
                <fullName>LC-FC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>