objects/Configuration__c/fields/Electronic_Card_Protection__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Card_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Card Protection</label>
    <type>Checkbox</type>
</CustomField>