objects/Configuration__c/fields/Ethernet_Mode__c.field-meta.xml
<CustomField>
    <fullName>Ethernet_Mode__c</fullName>
    <label>Ethernet Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Duplex</fullName>
            </value>
            <value>
                <fullName>Auto-negotiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>