objects/Configuration__c/fields/Fiber_Handoff__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Handoff__c</fullName>
    <label>Fiber Handoff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2-Fiber</fullName>
            </value>
            <value>
                <fullName>4-Fiber</fullName>
            </value>
            <value>
                <fullName>2-Fiber Protected</fullName>
            </value>
            <value>
                <fullName>4-Fiber Protected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>