objects/Configuration__c/fields/Flow_Control__c.field-meta.xml
<CustomField>
    <fullName>Flow_Control__c</fullName>
    <label>Flow Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asymmetrical</fullName>
            </value>
            <value>
                <fullName>Symmetrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>