objects/Configuration__c/fields/If_1_Gbps_solution_is_this_EoSONET__c.field-meta.xml
<CustomField>
    <fullName>If_1_Gbps_solution_is_this_EoSONET__c</fullName>
    <label>If 1 Gbps solution, is this EoSONET?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A - Solution is not 1 Gbps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>