objects/Configuration__c/fields/Jumbo_Frame__c.field-meta.xml
<CustomField>
    <fullName>Jumbo_Frame__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jumbo Frame</label>
    <type>Checkbox</type>
</CustomField>