objects/Configuration__c/fields/Line_Coding_Framing__c.field-meta.xml
<CustomField>
    <fullName>Line_Coding_Framing__c</fullName>
    <label>Line Coding / Framing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B3ZS / CBIT</fullName>
            </value>
            <value>
                <fullName>B3ZS / Clear Channel</fullName>
            </value>
            <value>
                <fullName>B3ZS / M13</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>