objects/Configuration__c/fields/Wavelength_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Wavelength_Protocol__c</fullName>
    <label>Wavelength Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Wavelength_Bandwidth__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>GIG E Protocol</fullName>
            </value>
            <value>
                <fullName>OC48 Protocol</fullName>
            </value>
            <value>
                <fullName>OTU-1 Protocol</fullName>
            </value>
            <value>
                <fullName>STM16 Protocol</fullName>
            </value>
            <value>
                <fullName>WANPY Protocol</fullName>
            </value>
            <value>
                <fullName>LANPHY Protocol</fullName>
            </value>
            <value>
                <fullName>OC192 Protocol</fullName>
            </value>
            <value>
                <fullName>OTU-2 Protocol</fullName>
            </value>
            <value>
                <fullName>STM64 Protocol</fullName>
            </value>
            <value>
                <fullName>OTU-3 Protocol</fullName>
            </value>
            <value>
                <fullName>OTU-4 Protocol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>