objects/Configuration__c/recordTypes/Dark_Fiber.recordType-meta.xml
<RecordType>
    <fullName>Dark_Fiber</fullName>
    <active>true</active>
    <label>Dark Fiber</label>
</RecordType>