objects/Configuration__c/recordTypes/DS1.recordType-meta.xml
<RecordType>
    <fullName>DS1</fullName>
    <active>true</active>
    <label>DS1</label>
</RecordType>