objects/Configuration__c/recordTypes/DS3.recordType-meta.xml
<RecordType>
    <fullName>DS3</fullName>
    <active>true</active>
    <label>DS3</label>
</RecordType>