objects/Configuration__c/recordTypes/Fast_Ethernet_Electrical_Interface.recordType-meta.xml
<RecordType>
    <fullName>Fast_Ethernet_Electrical_Interface</fullName>
    <active>true</active>
    <label>Fast Ethernet (Electrical Interface)</label>
</RecordType>