objects/Configuration__c/recordTypes/Ultra_Ethernet_10_100_Electrical_Interface.recordType-meta.xml
<RecordType>
    <fullName>Ultra_Ethernet_10_100_Electrical_Interface</fullName>
    <active>true</active>
    <label>Ultra Ethernet 10/100 (Electrical Interface)</label>
</RecordType>