objects/Configuration__c/recordTypes/Ultra_Ethernet_Gigabit_Ethernet_Optical_Interface.recordType-meta.xml
<RecordType>
    <fullName>Ultra_Ethernet_Gigabit_Ethernet_Optical_Interface</fullName>
    <active>true</active>
    <label>Ultra Ethernet Gigabit Ethernet (Optical Interface)</label>
</RecordType>