objects/Configuration__c/recordTypes/Wavelength.recordType-meta.xml
<RecordType>
    <fullName>Wavelength</fullName>
    <active>true</active>
    <label>Wavelength Services</label>
</RecordType>